--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/eas-contracts"]
 	path = lib/eas-contracts
 	url = https://github.com/ethereum-attestation-service/eas-contracts
+[submodule "lib/splits-contracts-monorepo"]
+	path = lib/splits-contracts-monorepo
+	url = https://github.com/0xSplits/splits-contracts-monorepo
