--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/splits-contracts-monorepo"]
 	path = lib/splits-contracts-monorepo
 	url = https://github.com/0xSplits/splits-contracts-monorepo
+[submodule "lib/hats-protocol"]
+	path = lib/hats-protocol
+	url = https://github.com/Hats-Protocol/hats-protocol
