--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/hats-protocol"]
 	path = lib/hats-protocol
 	url = https://github.com/Hats-Protocol/hats-protocol
+[submodule "lib/hypercerts"]
+	path = lib/hypercerts
+	url = https://github.com/hypercerts-org/hypercerts
