--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tnkshuuhei/ie-dao",
+  "name": "@tnkshuuhei/ies-contracts",
   "description": "",
   "version": "1.0.0",
   "author": {
@@ -31,8 +31,10 @@
 		"test:optimism" : "forge test --fork-url optimism",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
-    "deploy:governor": "forge script script/DeployIESGovernor.s.sol --rpc-url optimism  --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_OPTIMISTIC_ETHERSCAN --verify",
-    "deploy:tlc": "forge script script/DeployTLC.s.sol --rpc-url optimism  --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_OPTIMISTIC_ETHERSCAN --verify",
-		"deploy:ls1155" : "forge script script/DeployLiquidSplits.s.sol --rpc-url sepolia --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_ETHERSCAN --verify"
+    "deploy:optimism-governor": "forge script script/DeployIESGovernor.s.sol --rpc-url optimism  --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_OPTIMISTIC_ETHERSCAN --verify",
+		"deploy:sepolia-votingToken" : "forge script script/DeployVotingIESToken.s.sol --rpc-url sepolia --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_ETHERSCAN --verify",
+		"deploy:sepolia-governor": "forge script script/DeployIESGovernor.s.sol --rpc-url sepolia  --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_ETHERSCAN --verify",
+		"deploy:sepolia-ls1155" : "forge script script/DeployLiquidSplits.s.sol --rpc-url sepolia --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_ETHERSCAN --verify",
+		"deploy:sepolia-ies" : "forge script script/DeployIES.s.sol --rpc-url sepolia --broadcast --private-key $DEPLOYER_PRIVATE_KEY --etherscan-api-key $API_KEY_ETHERSCAN --verify"
   }
 }
